WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20122
REGRESSION (
r35075
-
r35110
): Cannot enlarge images at Apple Store product page
https://bugs.webkit.org/show_bug.cgi?id=20122
Summary
REGRESSION (r35075-r35110): Cannot enlarge images at Apple Store product page
mitz
Reported
2008-07-20 22:57:05 PDT
Clicking the product image at the URL should zoom in. Hovering the thumbnails should change the image. In TOT, none of that happens. There are multiple errors in the inspector console.
Attachments
patch
(24.83 KB, patch)
2008-07-26 19:36 PDT
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2008-07-20 23:10:08 PDT
<
rdar://problem/6089522
>
Sam Weinig
Comment 2
2008-07-26 19:36:41 PDT
Created
attachment 22497
[details]
patch
mitz
Comment 3
2008-07-26 19:44:03 PDT
Comment on
attachment 22497
[details]
patch r=me
Sam Weinig
Comment 4
2008-07-26 19:45:29 PDT
Fixed in
r35375
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug