WebCore:

2008-07-26  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix https://bugs.webkit.org/show_bug.cgi?id=20122
        REGRESSION (r35075-r35110): Cannot enlarge images at Apple Store product page

        Use strict parsing when in AlmostStrict mode.

        Tests: fast/dom/SelectorAPI/dumpNodeList-almost-strict.html
               fast/dom/SelectorAPI/id-fastpath-almost-strict.html
               fast/dom/SelectorAPI/id-fastpath-strict.html

        * dom/Node.cpp:
        (WebCore::Node::querySelector):
        (WebCore::Node::querySelectorAll):

LayoutTests:

2008-07-26  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix https://bugs.webkit.org/show_bug.cgi?id=20122
        REGRESSION (r35075-r35110): Cannot enlarge images at Apple Store product page

        - Additionally, fix some errors introduced in old tests.

        * fast/dom/SelectorAPI/dumpNodeList-almost-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/dumpNodeList-almost-strict.html: Added.
        * fast/dom/SelectorAPI/dumpNodeList-expected.txt:
        * fast/dom/SelectorAPI/dumpNodeList.html:
        * fast/dom/SelectorAPI/id-fastpath-almost-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/id-fastpath-almost-strict.html: Added.
        * fast/dom/SelectorAPI/id-fastpath-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/id-fastpath-strict.html: Added.
        * fast/dom/SelectorAPI/resources/id-fastpath-almost-strict.js: Added.
        * fast/dom/SelectorAPI/resources/id-fastpath-strict.js: Added.
        * fast/dom/SelectorAPI/resources/id-fastpath.js:



Canonical link: https://commits.webkit.org/27801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35375 268f45cc-cd09-0410-ab3c-d52691b4dbfc